test/test_examples/syntactic_examples/syntax_error/error_prologue_06.zig
// Syntax error: missing "ifj" token

const = @import("ifj24.zig"); 

pub fn main() void {

}  